<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OnyxTweaks</string>
    <string name="module_description">Xposed tweaks for Onyx Boox devices</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="value_not_set">Not set</string>
    <string name="continue_action">Continue</string>
    <string name="save">Save</string>
    <string name="default_state">Default</string>
    <string name="hidden_state">Hidden</string>
    <string name="and_conjunction">%1$s and %2$s</string>
    <string name="entry_already_exists">Entry already exists</string>
    <string name="xsp_init_failed">Failed to initialize shared configuration file</string>
    <string name="xsp_init_failed_summary">It seems that you are using an outdated version of LSPosed or LSPosed is not activated. Please update LSPosed and make sure that it is properly set up.</string>
    <string name="system_ui">SystemUI</string>
    <string name="launcher">Launcher</string>
    <string name="settings">Settings</string>
    <string name="toast_launcher_restarting">Launcher restarted</string>
    <string name="toast_system_settings_restarting">Settings restarted</string>
    <string name="toast_system_ui_restarting">Restarting system UI…</string>
    <string name="toast_generic_component_restarting">Restarting component…</string>
    <string name="toast_zygote_restarting">Soft-rebooting device…</string>
    <string name="toast_killing_process">Stopping processes of %1$s…</string>
    <string name="error_no_root_access">No root access</string>
    <string name="error_no_root_access_message">Root access is required for this action. Please open the Magisk manager app and grant root access to the app.</string>
    <string name="error_no_root_access_for_soft_reboot_message">Root access is required to soft-reboot the device. Either grant this app root or perform a full reboot manually.</string>
    <string name="xposed_scope_hint">Important: For this feature to work, you must manually enable this module for all apps you want to change the refresh mode for. This can be done in the module settings of your Xposed Manager.</string>
    <string name="status_needs_zygote_reset">Soft-reboot required to apply changes. Tap on this message to reboot now.</string>
    <string name="status_needs_system_ui_restart">SystemUI restart required to apply changes. Tap on this message to reload now.</string>
    <string name="status_needs_launcher_restart">Launcher restart required to apply changes. Tap on this message to reload now.</string>
    <string name="status_needs_system_ui_launcher_restart">SystemUI and launcher restart required to apply changes. Tap on this message to reload now.</string>
    <string name="compat_model_not_tested">This app was only tested on the Go Color 7 and may not work fully on other models.</string>
    <string name="compat_android_version_not_tested">This app was only tested on Android 12L and may not work fully on other versions.</string>
    <string name="error_invalid_input">Invalid input</string>
    <string name="error_invalid_number_out_of_range" tools:ignore="PluralsCandidate">Please enter a number between %1$d and %2$d.</string>
    <string name="error_invalid_number_format">Wrong number format</string>
    <string name="menu_restart_launcher">Restart Onyx launcher</string>
    <string name="menu_restart_system_ui">Restart system UI</string>
    <string name="menu_restart_zygote">Soft-reboot device</string>
    <string name="credits">Credits</string>
    <string name="credits_app">Developed by</string>
    <string name="credits_project_page">Visit project website on GitHub</string>
    <string name="credits_project_page_summary">Report issues, keep yourself updated, and read the source code</string>
    <string name="credits_version">Application version</string>
    <string name="credits_build_info">Build info</string>
    <string name="credits_build_info_summary">%1$s build @%2$s (compiled at %3$s)</string>
    <string name="credits_debug_build">Debug</string>
    <string name="credits_release_build">Release</string>
    <string name="launcher_settings">Launcher</string>
    <string name="launcher_settings_summary">Widgets, dock, wallpaper, apps, etc.</string>
    <string name="status_bar_settings">Status Bar</string>
    <string name="status_bar_settings_summary">Notifications, status icons, etc.</string>
    <string name="quick_settings_settings">Quick Settings</string>
    <string name="quick_settings_settings_summary">Grid size, user switcher, tiles</string>
    <string name="recents_settings">Recents</string>
    <string name="recents_settings_summary">Grid size, spacing, style</string>
    <string name="eink_optimizations_settings">e-Ink optimizations</string>
    <string name="eink_optimizations_settings_summary">Regal mode, per-activity settings</string>
    <string name="stock_system_settings">Android system settings</string>
    <string name="stock_system_settings_summary">Hidden settings, one-handed mode</string>
    <string name="mmkv_editor">System config editor</string>
    <string name="mmkv_editor_summary"><![CDATA[View & edit MMKV configuration files]]></string>
    <string name="misc_settings">Miscellaneous</string>
    <string name="misc_settings_summary">Other apps, troubleshooting</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Support the developer</string>
    <string name="about_settings">About</string>
    <string name="about_settings_summary">Credits, support, updates</string>
    <string name="status_bar_clock_settings">Status bar clock</string>
    <string name="status_bar_clock_settings_summary">Change the position and style of the clock</string>
    <string name="launcher_apps">Apps</string>
    <string name="launcher_app_show_settings">Show stock settings app</string>
    <string name="launcher_app_show_settings_summary">Remove the stock settings app from the app filter</string>
    <string name="launcher_app_show_file_mgr">Show stock file manager app</string>
    <string name="launcher_app_show_file_mgr_summary">Remove the stock file manager app from the app filter</string>
    <string name="launcher_app_show_all">Show all hidden apps</string>
    <string name="launcher_app_show_all_summary">Disable the built-in app filter and shows all apps</string>
    <string name="launcher_apps_notice">After a hidden app has been shown, it will persist even when disabling this setting. To hide it again, you need to reset your desktop using the \'Re-initialize desktop\' option below.</string>
    <string name="launcher_desktop">Desktop</string>
    <string name="launcher_desktop_wallpaper">Enable system-wide wallpaper support</string>
    <string name="launcher_desktop_wallpaper_summary">Allow setting wallpapers, even in 3rd party launchers</string>
    <string name="launcher_desktop_toolbar_state">Toolbar visibility above the app grid</string>
    <string name="launcher_desktop_toolbar_state_default">Default state</string>
    <string name="launcher_desktop_toolbar_state_invisible">Invisible</string>
    <string name="launcher_desktop_toolbar_state_visible">Visible</string>
    <string name="launcher_desktop_hide_labels">Hide app labels</string>
    <string name="launcher_desktop_hide_labels_summary">Remove all application labels and save space on the desktop</string>
    <string name="launcher_desktop_widgets_advanced"><![CDATA[Enable widget support & advanced features]]></string>
    <string name="launcher_desktop_widgets_advanced_summary">Allow adding widgets to the desktop by long-pressing. Removes the toolbar in the app drawer</string>
    <string name="eink_center">e-Ink Center</string>
    <string name="eink_center_always_show_regal_mode">Always show regal mode</string>
    <string name="eink_center_always_show_regal_mode_summary">Allow any app to be used in regal mode, even in system apps</string>
    <string name="eink_center_always_allow_eac">Always enable e-Ink app customization settings</string>
    <string name="eink_center_always_allow_eac_summary">Unlock the e-Ink app optimization menu in all apps, even in system apps</string>
    <string name="eink_rules">Custom rules</string>
    <string name="eink_per_activity_refresh_mode">Per-activity refresh mode</string>
    <string name="eink_per_activity_refresh_mode_summary">Custom refresh mode rules for specific app activities</string>
    <string name="settings_shortcuts">Shortcuts</string>
    <string name="settings_open_stock_settings">Open stock settings</string>
    <string name="settings_open_stock_settings_summary">Launch Android\'s stock settings app</string>
    <string name="settings_hidden_sections">Hidden sections</string>
    <string name="settings_show_gestures">Show gesture settings</string>
    <string name="settings_show_gestures_summary"><![CDATA[Show one-handed & power button gestures (under Settings > General > Gestures)]]></string>
    <string name="settings_show_memory_in_app_info">Show memory usage in app info</string>
    <string name="settings_show_memory_in_app_info_summary"><![CDATA[Show the memory usage history on the app info screen (under Settings > Apps > App info)]]></string>
    <string name="misc_ota">Firmware updates</string>
    <string name="misc_ota_tips">How to update a system patched with Magisk</string>
    <string name="misc_ota_tips_summary">Information on how to update quickly without needing to reflash Magisk via EDL</string>
    <string name="misc_ota_prevent_reboot_after_ota">Prevent automatic reboot after OTA update</string>
    <string name="misc_ota_prevent_reboot_after_ota_summary">Allows you to return to the Magisk app to re-install it to the new boot partition</string>
    <string name="misc_troubleshooting">Troubleshooting</string>
    <string name="misc_export_log_hint"><![CDATA[Check LSPosed\'s module log if you are experiencing issues with this module. You can see which components are causing issues there.\nPlease export & share the logs using the save button in the top toolbar if you want open a bug report on GitHub.]]></string>
    <string name="misc_share_debug_logs">Open module logs in LSPosed</string>
    <string name="misc_share_debug_logs_summary">Check error logs for troubleshooting purposes</string>
    <string name="misc_mmkv_editor">MMKV editor</string>
    <string name="misc_mmkv_always_auto_detect_unknown_types">Always auto-detect unknown value types, if possible</string>
    <string name="misc_mmkv_always_auto_detect_unknown_types_summary">Instead of a showing type selection dialog for unknown types, always auto-detect the value type (may be inaccurate)</string>
    <string name="misc_floating_button">NaviBall (Floating button)</string>
    <string name="misc_floating_button_summary">Behavior, custom actions</string>
    <string name="misc_resume_app">Resume app activities after reboot</string>
    <string name="misc_resume_app_summary">Auto-resume last active activity</string>
    <string name="floating_button_actions">Actions</string>
    <string name="floating_button_show_all_apps">Remove app filter</string>
    <string name="floating_button_show_all_apps_summary">Show all apps for the \'Open app\' action</string>
    <string name="floating_button_show_bw_function">Add B/W mode action</string>
    <string name="floating_button_show_bw_function_summary">Add B/W mode to the list of available button actions</string>
    <string name="floating_button_launch">Open NaviBall</string>
    <string name="floating_button_launch_summary">Launch NaviBall settings</string>
    <string name="editor_undo">Undo</string>
    <string name="editor_redo">Redo</string>
    <string name="editor_find_and_replace">Find/replace…</string>
    <string name="editor_save">Save</string>
    <string name="editor_text_size">Text size</string>
</resources>