<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:title="@string/misc_floating_button"
        app:summary="@string/misc_floating_button_summary"
        app:icon="@drawable/ic_twotone_touch_app_24dp"
        app:fragment="me.timschneeberger.onyxtweaks.ui.fragments.SettingsFloatingButtonFragment" />

    <Preference
        app:title="@string/misc_resume_app"
        app:summary="@string/misc_resume_app_summary"
        app:icon="@drawable/ic_twotone_rocket_launch_24dp"
        app:fragment="me.timschneeberger.onyxtweaks.ui.fragments.ResumeActivitySettingsFragment"
        app:allowDividerBelow="true" />


    <PreferenceCategory
        app:title="@string/misc_ota"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/key_misc_ota_tips"
            android:title="@string/misc_ota_tips"
            android:summary="@string/misc_ota_tips_summary"
            app:iconSpaceReserved="false" />

        <me.timschneeberger.onyxtweaks.ui.preferences.MaterialSwitchPreference
            android:key="@string/key_misc_skip_reboot_after_ota"
            android:defaultValue="@bool/default_misc_skip_reboot_after_ota"
            android:title="@string/misc_ota_prevent_reboot_after_ota"
            android:summary="@string/misc_ota_prevent_reboot_after_ota_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/misc_troubleshooting"
        app:iconSpaceReserved="false">

        <Preference
            android:icon="@drawable/ic_twotone_info_24dp"
            android:summary="@string/misc_export_log_hint"
            android:selectable="false"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/key_misc_share_debug_logs"
            android:title="@string/misc_share_debug_logs"
            android:summary="@string/misc_share_debug_logs_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/misc_mmkv_editor"
        app:iconSpaceReserved="false">

        <me.timschneeberger.onyxtweaks.ui.preferences.MaterialSwitchPreference
            android:key="@string/key_misc_mmkv_always_auto_detect_unknown_types"
            android:defaultValue="@bool/default_misc_mmkv_always_auto_detect_unknown_types"
            android:title="@string/misc_mmkv_always_auto_detect_unknown_types"
            android:summary="@string/misc_mmkv_always_auto_detect_unknown_types_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>