<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:title="@string/eink_center"
        app:iconSpaceReserved="false">

        <me.timschneeberger.onyxtweaks.ui.preferences.MaterialSwitchPreference
            android:key="@string/key_eink_center_always_show_regal_mode"
            android:defaultValue="@bool/default_eink_center_always_show_regal_mode"
            android:title="@string/eink_center_always_show_regal_mode"
            android:summary="@string/eink_center_always_show_regal_mode_summary"
            app:iconSpaceReserved="false" />
        <me.timschneeberger.onyxtweaks.ui.preferences.MaterialSwitchPreference
            android:key="@string/key_eink_center_always_allow_eac"
            android:defaultValue="@bool/default_eink_center_always_allow_eac"
            android:title="@string/eink_center_always_allow_eac"
            android:summary="@string/eink_center_always_allow_eac_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/eink_rules"
        app:iconSpaceReserved="false">

        <Preference
            app:title="@string/eink_per_activity_refresh_mode"
            app:summary="@string/eink_per_activity_refresh_mode_summary"
            app:iconSpaceReserved="false"
            app:fragment="me.timschneeberger.onyxtweaks.ui.fragments.PerActivitySettingsFragment" />
    </PreferenceCategory>
</PreferenceScreen>